# Cortex

./: .gitignore  DEMO_SCRIPT.md  FEATURES.md  PROJECT_REPORT.html  QUICKSTART.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  worker.py  worker.py.bak
backend/app/agents/: __init__.py  base_agent.py  multi_agent_system.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: briefs.py  conflicts_api.py  decisions.py  employees.py  events.py  graph.py  notifications.py  org_health.py  (+4 more)
backend/app/core/: config.py  websocket.py
backend/app/db/: neo4j_client.py  session.py
backend/app/graphs/: __init__.py  extraction_graph.py  state.py
backend/app/models/: __init__.py  conflict.py  employee_metric.py  event.py  extraction.py  graph_schema.py  notification.py  person.py  routing_rule.py  subscription.py  ticket.py  topic.py
backend/app/prompts/: __init__.py  extraction_prompts.py
backend/app/schemas/: event.py
backend/app/services/: brief_service.py  conflict_detection_service.py  event_service.py  extraction_service.py  graph_service.py  health_service.py  notification_service.py  routing_service.py  sync_service.py  sync_service.py.bak2  sync_service.py.bak3  sync_service.py.bak4
backend/app/utils/: README.md  __init__.py  email_parser.py  enron_email_ingestion.py
backend/scripts/: README.md  README_AUTH_CONFLICT.md  add_auth_conflict.py  create_caching_narrative.py  create_team_data.py  ingest_sample_emails.py  run_caching_narrative.sh  seed_full_org.py  setup_teams.sh
(+60 files in other folders)
